--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm">
-                            <label>Hello! I am sirapob. Web Developer</label>
-                            <label>I would like to work for full-stack web developer.<br> This is my happiness and i can good work for this Job</label>
+                            <label>Hello! My name is Sirapob Sithi.Now aday, I currently work as a web developer.
+                                 I can do front-end and back-end. I'm cheerful and ready to learn new things.</label>
                         </div>
                     </div>
                 </div>
