--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <label><b>Description: </b></label>
                     </div>
                     <div class="col-sm-9">
-                        <label>Develop website by Laravel Framework for use in Property Management.</label>
+                        <label>Developing website by Laravel Framework for use in Property Management.</label>
                     </div>
                 </div>
                 <hr>
@@ -133,7 +133,7 @@
                         <label><b>Description: </b></label>
                     </div>
                     <div class="col-sm-9">
-                        <label>Develop website and application for use within the company.</label>
+                        <label>Developing website and application for use within the company.</label>
                     </div>
                 </div>
             </div>
