--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-3"><label><b>Age:</b></label></div>
-                        <div class="col-sm-9"><label>22</label></div>
+                        <div class="col-sm-9"><label>23</label></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3"><label><b>Phone:</b></label></div>
-                        <div class="col-sm-9"><label>0615499424</label></div>
+                        <div class="col-sm-9"><label>+66615499424</label></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3"><label><b>E-mail:</b></label></div>
@@ -70,8 +70,8 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm">
-                            <label>Hello! My name is Sirapob Sithi.Now aday, I currently work as a web developer.
-                                 I can do front-end and back-end. I'm cheerful and ready to learn new things.</label>
+                            <label>Hello! I am sirapob. Web Developer</label>
+                            <label>I would like to work for full-stack web developer.<br> This is my happiness and i can good work for this Job</label>
                         </div>
                     </div>
                 </div>
@@ -85,12 +85,40 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm">
+                        <label><b>i-App Creation Co., Ltd.</b></label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm" id="work">
+                        <label>2 December 2019 - Current ({{ work_months }} month)</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label><b>Position: </b></label>
+                    </div>
+                    <div class="col-sm-9">
+                        <label>iOS Developer</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label><b>Description: </b></label>
+                    </div>
+                    <div class="col-sm-9">
+                        <label>-</label>
+                    </div>
+                </div>
+                <!-- ========================================== -->
+                <hr>
+                <div class="row">
+                    <div class="col-sm">
                         <label><b>MEWITTY SOLUTION CO.,LTD.</b></label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm" id="work">
-                        <label>15 June 2019 - Current ({{ work_months }} month)</label>
+                        <label>15 June 2019 - 29 November 2019 (6 month)</label>
                     </div>
                 </div>
                 <div class="row">
@@ -106,7 +134,7 @@
                         <label><b>Description: </b></label>
                     </div>
                     <div class="col-sm-9">
-                        <label>Developing website by Laravel Framework for use in Property Management.</label>
+                        <label>Develop website by Laravel Framework for use in Property Management.</label>
                     </div>
                 </div>
                 <hr>
@@ -133,7 +161,7 @@
                         <label><b>Description: </b></label>
                     </div>
                     <div class="col-sm-9">
-                        <label>Developing website and application for use within the company.</label>
+                        <label>Develop website and application for use within the company.</label>
                     </div>
                 </div>
             </div>
@@ -260,7 +288,7 @@
 <!-- JAVASCRIPT -->
 <script>
     var now = moment(new Date()); //todays date
-    var end = moment("2019-06-15"); // another date
+    var end = moment("2019-12-02"); // another date
     var duration = moment.duration(now.diff(end));
     var work_months = duration.asMonths();
     work_months = Math.floor(work_months);
