--- a/index.html
+++ b/index.html
@@ -37,43 +37,36 @@
             <h5>MEWITTY SOLUTION CO.,LTD.</h5>
         </div>
     </div>
-    <div class="container" style="padding-top: 5%; padding-bottom: 5%;">
+    <div class="container" style="padding: 10%;">
         <!-- BASIC INFORMATION -->
         <div class="card border-success mb-3" style="padding: 5%;">
             <div class="row">
                 <div class="col-sm">
-                    <h3>BASIC INFORMATION</h3>
+                    <h3 class="d-flex justify-content-center">BASIC INFORMATION</h3>
                     <hr>
-                    <div class="row">
-                        <div class="col-sm-3"><label><b>Nickname:</b></label></div>
-                        <div class="col-sm-9"><label>Palm</label></div>
+                    <div class="row d-flex">
+                        <div class="col-sm-6 d-flex justify-content-end"><label><b>Nickname:</b></label></div>
+                        <div class="col-sm-6"><label>Palm</label></div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-3"><label><b>Age:</b></label></div>
-                        <div class="col-sm-9"><label>23</label></div>
+                    <div class="row d-flex">
+                        <div class="col-sm-6 d-flex justify-content-end"><label><b>Age:</b></label></div>
+                        <div class="col-sm-6"><label>23</label></div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-3"><label><b>Phone:</b></label></div>
-                        <div class="col-sm-9"><label>+66615499424</label></div>
+                    <div class="row d-flex">
+                        <div class="col-sm-6 d-flex justify-content-end"><label><b>Phone:</b></label></div>
+                        <div class="col-sm-6"><label>+66615499424</label></div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-3"><label><b>E-mail:</b></label></div>
-                        <div class="col-sm-9"><label>sirapob.sithi@gmail.com</label></div>
+                    <div class="row d-flex">
+                        <div class="col-sm-6 d-flex justify-content-end"><label><b>E-mail:</b></label></div>
+                        <div class="col-sm-6"><label>sirapob.sithi@gmail.com</label></div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-3"><label><b>Address:</b></label></div>
-                        <div class="col-sm-9"><label>Bangkok, Thailand</label></div>
+                    <div class="row d-flex">
+                        <div class="col-sm-6 d-flex justify-content-end"><label><b>Address:</b></label></div>
+                        <div class="col-sm-6"><label>Bangkok, Thailand</label></div>
                     </div>
                 </div>
                 <div class="col-sm">
-                    <h3>ABOUT ME</h3>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm">
-                            <label>Hello! I am sirapob. Web Developer</label>
-                            <label>I would like to work for full-stack web developer.<br> This is my happiness and i can good work for this Job</label>
-                        </div>
-                    </div>
+                    <img src="profile.jpg" alt="Smiley face" height="100%" width="100%">
                 </div>
             </div>
         </div>
@@ -177,7 +170,7 @@
                         <label><b>Programing Language: </b></label>
                     </div>
                     <div class="col-sm-9">
-                        <label>PHP, JavaScript, Python, C++</label>
+                        <label>Swift, Objc, PHP, JavaScript, Python, C++</label>
                     </div>
                 </div>
                 <div class="row">
@@ -209,7 +202,7 @@
                         <label><b>Development Tools: </b></label>
                     </div>
                     <div class="col-sm-9">
-                        <label>Sublime Text, Microsoft Visual Studio, Commandline Terminal, MySQL Workbench, Postman, Android Studio</label>
+                        <label>Xcode, Sublime Text, Microsoft Visual Studio, Commandline Terminal, MySQL Workbench, Postman, Android Studio</label>
                     </div>
                 </div>
             </div>
@@ -253,21 +246,21 @@
                 </div>
             </div>
         </div>
-        <div class="row d-flex justify-content-center">
-            <div class="col-sm-4"></div>
-            <div class="col-sm">
+        <div class="row" style="padding: 10%;">
+            <!-- <div class="col-sm-4"></div> -->
+            <div class="col-sm d-flex justify-content-center">
                 <a href="https://www.linkedin.com/in/sirapob-sithi/"><img src="https://img.icons8.com/color/64/000000/linkedin.png"></a>
             </div>
-            <div class="col-sm">
+            <div class="col-sm d-flex justify-content-center">
                 <a href="https://www.facebook.com/palmsii"><img src="https://img.icons8.com/color/64/000000/facebook.png"></a>
             </div>
-            <div class="col-sm">
+            <div class="col-sm d-flex justify-content-center">
                 <a href="https://twitter.com/Palmpob"><img src="https://img.icons8.com/color/64/000000/twitter.png"></a>
             </div>
-            <div class="col-sm">
+            <div class="col-sm d-flex justify-content-center">
                 <a href="https://www.instagram.com/palmsi_life/"><img src="https://img.icons8.com/color/64/000000/instagram-new.png"></a>
             </div>
-            <div class="col-sm-4"></div>
+            <!-- <div class="col-sm-4"></div> -->
 
         </div>
 
