--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="row align-self-center">
             <div class="col-4 text-dark align-self-center">
-                <h1>AirEnvi</h1>
+                <h1>airenvi</h1>
                 <hr>
                 <h4>Mobile Application for iOS and Android</h4>
                 <h5>[ 2018 - 2019 ]</h5>
