--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         </div>
         <div class="row align-self-center">
             <div class="col-4 text-dark align-self-center">
-                <h1>airenvi</h1>
+                <h1>Air Envi</h1>
                 <hr>
                 <h4>Mobile Application for iOS and Android</h4>
                 <h5>[ 2018 - 2019 ]</h5>
             </div>
             <div class="col-8">
-                <img style="width: 100%;" src="asset/AirEnvi.png">
+                <img style="width: 100%;" src="asset/airenvi.png">
             </div>
         </div>
 
